--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://shakeashiya.github.io/jsProject",
+  "homepage": "https://github.com/Shakeashiya15/CampusLostFound",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
